[gd_scene load_steps=16 format=3 uid="uid://bvd4xtjxmdi6"]

[ext_resource type="Script" path="res://player2.gd" id="1_4dnrf"]
[ext_resource type="Shader" path="res://player.gdshader" id="2_66s6j"]
[ext_resource type="Texture2D" uid="uid://il35eqnjhx7r" path="res://Art/player_sheet.png" id="3_ixdqh"]
[ext_resource type="AudioStream" uid="uid://dnvg21pt30g78" path="res://Audio/Sounds/whoomp.mp3" id="4_thbej"]
[ext_resource type="AudioStream" uid="uid://b6s5et42031yf" path="res://Audio/Sounds/whoomp_rev.mp3" id="5_rcuar"]
[ext_resource type="AudioStream" uid="uid://dux5lt0p060gx" path="res://Audio/Sounds/air_move - Almitory CC0.mp3" id="6_gbrqc"]
[ext_resource type="AudioStream" uid="uid://bgsg1ydyamw8m" path="res://Audio/Sounds/packun_eating.mp3" id="7_q1h0p"]
[ext_resource type="Script" path="res://camera.gd" id="8_y56bp"]
[ext_resource type="Script" path="res://rumble_logic.gd" id="9_1i6ym"]
[ext_resource type="AudioStream" uid="uid://dfp200gcwklsq" path="res://Audio/Sounds/rumble.mp3" id="9_teh7b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rfho5"]
size = Vector2(43.25, 43.25)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vjw4g"]
shader = ExtResource("2_66s6j")
shader_parameter/anim_speed = 0.0
shader_parameter/center = Vector2(0, -4)
shader_parameter/squish_amount = 0.0

[sub_resource type="Animation" id="Animation_fdo22"]
resource_name = "iframes"
length = 1.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 0.7, 1.2, 1.3, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_d3eag"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fxjit"]
_data = {
"RESET": SubResource("Animation_d3eag"),
"iframes": SubResource("Animation_fdo22")
}

[node name="Player" type="CharacterBody2D"]
z_index = 3
position = Vector2(16, 28)
scale = Vector2(4, 4)
collision_mask = 1026
script = ExtResource("1_4dnrf")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
z_index = 1
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-2, -5, 2, -5, 2, 0, -2, 0)

[node name="ClimbArea" type="Area2D" parent="."]
visible = false
z_index = 1
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ClimbArea"]
polygon = PackedVector2Array(-2, -5, 2, -5, 2, 0, -2, 0)

[node name="DeathArea" type="Area2D" parent="."]
visible = false
z_index = 1
collision_layer = 0
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DeathArea"]
polygon = PackedVector2Array(-2, -5, 2, -5, 2, 0, -2, 0)

[node name="HitArea" type="Area2D" parent="."]
visible = false
z_index = 1
collision_layer = 0
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitArea"]
polygon = PackedVector2Array(-2, -5, 2, -5, 2, 0, -2, 0)

[node name="WaterArea" type="Area2D" parent="."]
visible = false
z_index = 1
collision_layer = 0
collision_mask = 256

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WaterArea"]
polygon = PackedVector2Array(-2, -5, 2, -5, 2, 0, -2, 0)

[node name="InfoArea" type="Area2D" parent="."]
visible = false
z_index = 1
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfoArea"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_rfho5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-2, -5, 2, -5, 2, 0, -2, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_vjw4g")
texture = ExtResource("3_ixdqh")
offset = Vector2(0, -3)
hframes = 4
vframes = 4

[node name="Big2Small" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_thbej")
volume_db = -20.0
max_polyphony = 3
bus = &"SFX"

[node name="Small2Big" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rcuar")
volume_db = -20.0
pitch_scale = 1.37
max_polyphony = 3
bus = &"SFX"

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_gbrqc")
volume_db = -15.0
pitch_scale = 2.0
max_polyphony = 3
bus = &"SFX"

[node name="BigJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_gbrqc")
volume_db = -10.0
pitch_scale = 0.7
max_polyphony = 6
bus = &"SFX"

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_q1h0p")
volume_db = -15.0
max_polyphony = 3
bus = &"SFX"

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
limit_left = 0
limit_top = -8250
limit_bottom = 1000
position_smoothing_enabled = true
script = ExtResource("8_y56bp")

[node name="ITimer" type="Timer" parent="."]
wait_time = 1.9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fxjit")
}

[node name="Rumble" type="Node" parent="."]
script = ExtResource("9_1i6ym")

[node name="AirRumble" type="AudioStreamPlayer2D" parent="Rumble"]
position = Vector2(16, 28)
scale = Vector2(4, 4)
stream = ExtResource("9_teh7b")
volume_db = -80.0
pitch_scale = 2.0
autoplay = true
bus = &"SFX"

[connection signal="body_entered" from="ClimbArea" to="." method="_on_climb_area_body_entered"]
[connection signal="body_exited" from="ClimbArea" to="." method="_on_climb_area_body_exited"]
[connection signal="body_entered" from="DeathArea" to="." method="_on_death_area_body_entered"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_entered" from="WaterArea" to="." method="_on_water_area_body_entered"]
[connection signal="body_exited" from="WaterArea" to="." method="_on_water_area_body_exited"]
[connection signal="area_entered" from="InfoArea" to="." method="_on_info_area_area_entered"]
[connection signal="area_exited" from="InfoArea" to="." method="_on_info_area_area_exited"]
[connection signal="timeout" from="ITimer" to="." method="_on_i_timer_timeout"]
